@@ -22,6 +22,7 @@ table.wiki-calendar th {
   text-align: center; font-weight: bold;
   }
 table.wiki-calendar td { padding: 0; border: none; text-align: right; }
+table.wiki-calendar td.week { font-size: 0.8em; }
 table.wiki-calendar a.day {
   display: block; width: 2em; height: 100%; margin: 0; border: 2px solid #fff;
   padding: 0; background-color: #fff; color: #888; text-decoration: none;
@@ -51,6 +52,7 @@ table.wikitcalendar caption a {
 table.wikitcalendar caption a.prev { padding-right: 5px; font: bold; }
 table.wikitcalendar caption a.next { padding-left: 5px; font: bold; }
 table.wikitcalendar caption a:hover { background-color: #eee; }
+table.wikitcalendar td.week { font-size: 0.8em; }
 table.wikitcalendar td.today {
     background: #fbfbfb; border-color: #444444; color: #444;
     border-style: solid; border-width: 1px;
